implementado listado bandas

--- a/templates/artista/lista.html.twig
+++ b/templates/artista/lista.html.twig
@@ -39,7 +39,7 @@
                 <td>{% if artista.esCompositor %}SÍ{% else %}NO{% endif %}</td>
                 <td>
                     {% for banda in artista.bandas %}
-                    {{ banda }}
+                    {{ banda }}<br>
                     {% endfor %}
                 </td>
                 <td>
