implementado listado canciones

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -15,6 +15,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ path('banda_listar') }}">Bandas<span class="sr-only">(actual)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('cancion_listar') }}">Canciones<span class="sr-only">(actual)</span></a>
+                </li>
             </ul>
         </div>
     </nav>
