--- a/templates/cancion/lista.html.twig
+++ b/templates/cancion/lista.html.twig
@@ -1,20 +1,46 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}Hello CancionController!{% endblock %}
+{% block content %}
+    <h1>Canciones</h1>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    {% for mensaje in app.flashes('error') %}
+        <div>
+            {{ mensaje }}
+        </div>
+    {% endfor %}
+    {% for mensaje in app.flashes('exito') %}
+        <div>
+            {{ mensaje }}
+        </div>
+    {% endfor %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Juan Antonio/Desktop/Marta/2_DAW/HLC/proyecto/gestion_musica/src/Controller/CancionController.php'|file_link(0) }}">src/Controller/CancionController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Juan Antonio/Desktop/Marta/2_DAW/HLC/proyecto/gestion_musica/templates/cancion/lista.html.twig'|file_link(0) }}">templates/cancion/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('cancion_listar') }}" class="btn btn-primary">nuevo</a>
+    <table class="table table-bordered table-hover table-striped">
+        <thead>
+        <tr>
+            <th>Código</th>
+            <th>Titulo</th>
+            <th>Duracion</th>
+            <th>Disco</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for cancion in canciones %}
+            <tr>
+                <td>{{ cancion.id }}</td>
+                <td>{{ cancion.titulo }}</td>
+                <td>{{ cancion.duracion }}</td>
+                <td>{{ cancion.disco }}</td>
+                <td>
+                    <a href="{{ path('artista_listar', {id : cancion.id}) }}" class="btn btn-primary">editar</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <th colspan="5">No hay canciones</th>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
