implementado listado discos

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -18,6 +18,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ path('cancion_listar') }}">Canciones<span class="sr-only">(actual)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('disco_listar') }}">Discos<span class="sr-only">(actual)</span></a>
+                </li>
             </ul>
         </div>
     </nav>
