--- a/templates/artista/formulario.html.twig
+++ b/templates/artista/formulario.html.twig
@@ -9,7 +9,7 @@
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <input type="submit" value="enviar" class="btn btn-success">
-    {% if artista.id %}<a href="{{ path('artista_listar', {id : artista.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
+    {% if artista.id %}<a href="{{ path('artista_eliminar', {id : artista.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
     {{ form_end(form) }}
 {% endblock %}
 
