--- a/templates/banda/lista.html.twig
+++ b/templates/banda/lista.html.twig
@@ -14,7 +14,7 @@
         </div>
     {% endfor %}
 
-    <a href="{{ path('banda_listar') }}" class="btn btn-primary">nuevo</a>
+    <a href="{{ path('banda_nuevo') }}" class="btn btn-primary">nuevo</a>
     <table class="table table-bordered table-hover table-striped">
         <thead>
         <tr>
@@ -43,7 +43,7 @@
                     {% endfor %}
                 </td>
                 <td>
-                    <a href="{{ path('banda_listar', {id : banda.id}) }}" class="btn btn-primary">editar</a>
+                    <a href="{{ path('banda_modificar', {id : banda.id}) }}" class="btn btn-primary">editar</a>
                 </td>
             </tr>
         {% else %}
