--- a/templates/banda/formulario.html.twig
+++ b/templates/banda/formulario.html.twig
@@ -9,6 +9,6 @@
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <input type="submit" value="enviar" class="btn btn-success">
-    {% if banda.id %}<a href="{{ path('banda_listar', {id : banda.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
+    {% if banda.id %}<a href="{{ path('banda_eliminar', {id : banda.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
     {{ form_end(form) }}
 {% endblock %}
