--- a/templates/disco/lista.html.twig
+++ b/templates/disco/lista.html.twig
@@ -14,7 +14,7 @@
         </div>
     {% endfor %}
 
-    <a href="{{ path('disco_listar') }}" class="btn btn-primary">nuevo</a>
+    <a href="{{ path('disco_nuevo') }}" class="btn btn-primary">nuevo</a>
     <table class="table table-bordered table-hover table-striped">
         <thead>
         <tr>
@@ -37,7 +37,7 @@
                 <td>{{ disco.tipo }}</td>
                 <td>{{ disco.canciones | length }}</td>
                 <td>
-                    <a href="{{ path('disco_listar', {id : disco.id}) }}" class="btn btn-primary">editar</a>
+                    <a href="{{ path('disco_modificar', {id : disco.id}) }}" class="btn btn-primary">editar</a>
                 </td>
             </tr>
         {% else %}
