--- a/templates/cancion/lista.html.twig
+++ b/templates/cancion/lista.html.twig
@@ -14,7 +14,7 @@
         </div>
     {% endfor %}
 
-    <a href="{{ path('cancion_listar') }}" class="btn btn-primary">nuevo</a>
+    <a href="{{ path('cancion_nuevo') }}" class="btn btn-primary">nuevo</a>
     <table class="table table-bordered table-hover table-striped">
         <thead>
         <tr>
@@ -33,7 +33,7 @@
                 <td>{{ cancion.duracion }}</td>
                 <td>{{ cancion.disco }}</td>
                 <td>
-                    <a href="{{ path('artista_listar', {id : cancion.id}) }}" class="btn btn-primary">editar</a>
+                    <a href="{{ path('cancion_modificar', {id : cancion.id}) }}" class="btn btn-primary">editar</a>
                 </td>
             </tr>
         {% else %}
