--- a/templates/cancion/formulario.html.twig
+++ b/templates/cancion/formulario.html.twig
@@ -9,6 +9,6 @@
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <input type="submit" value="enviar" class="btn btn-success">
-    {% if cancion.id %}<a href="{{ path('cancion_listar', {id : cancion.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
+    {% if cancion.id %}<a href="{{ path('cancion_eliminar', {id : cancion.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
     {{ form_end(form) }}
 {% endblock %}
