--- a/templates/banda/lista.html.twig
+++ b/templates/banda/lista.html.twig
@@ -44,6 +44,7 @@
                 </td>
                 <td>
                     <a href="{{ path('banda_modificar', {id : banda.id}) }}" class="btn btn-primary">editar</a>
+                    <a href="{{ path('banda_eliminar', {id : banda.id}) }}" class="btn btn-danger">borrar</a>
                 </td>
             </tr>
         {% else %}
