--- a/templates/disco/lista.html.twig
+++ b/templates/disco/lista.html.twig
@@ -43,7 +43,7 @@
             </tr>
         {% else %}
             <tr>
-                <th colspan="5">No hay canciones</th>
+                <th colspan="6">No hay discos</th>
             </tr>
         {% endfor %}
         </tbody>
