implementado cambio de contraseña

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -26,6 +26,9 @@
                 <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Login</button>
             </a>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <a class="nav-link" href="{{ path('artista_cambiar_clave') }}">
+                    <button class="btn btn-outline-danger my-2 my-sm-0" type="button">Cambiar contraseña</button>
+                </a>
                 <a class="nav-link" href="{{ path('salir') }}">
                     <button class="btn btn-outline-danger my-2 my-sm-0" type="button">Logout</button>
                 </a>
