--- a/templates/artista/formulario.html.twig
+++ b/templates/artista/formulario.html.twig
@@ -8,6 +8,7 @@
     {% endfor %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <a href="{{ path('artista_listar') }}" class="btn btn-info">Volver</a>
     <input type="submit" value="enviar" class="btn btn-success">
     {% if artista.id %}<a href="{{ path('artista_eliminar', {id : artista.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
     {{ form_end(form) }}
