--- a/templates/banda/formulario.html.twig
+++ b/templates/banda/formulario.html.twig
@@ -8,6 +8,7 @@
     {% endfor %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <a href="{{ path('banda_listar') }}" class="btn btn-info">Volver</a>
     <input type="submit" value="enviar" class="btn btn-success">
     {% if banda.id %}<a href="{{ path('banda_eliminar', {id : banda.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
     {{ form_end(form) }}
