--- a/templates/cancion/formulario.html.twig
+++ b/templates/cancion/formulario.html.twig
@@ -8,6 +8,7 @@
     {% endfor %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <a href="{{ path('cancion_listar') }}" class="btn btn-info">Volver</a>
     <input type="submit" value="enviar" class="btn btn-success">
     {% if cancion.id %}<a href="{{ path('cancion_eliminar', {id : cancion.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
     {{ form_end(form) }}
