--- a/templates/disco/formulario.html.twig
+++ b/templates/disco/formulario.html.twig
@@ -8,6 +8,7 @@
     {% endfor %}
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <a href="{{ path('disco_listar') }}" class="btn btn-info">Volver</a>
     <input type="submit" value="enviar" class="btn btn-success">
     {% if disco.id %}<a href="{{ path('disco_eliminar', {id : disco.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
     {{ form_end(form) }}
