--- a/templates/artista/formulario.html.twig
+++ b/templates/artista/formulario.html.twig
@@ -10,7 +10,10 @@
     {{ form_widget(form) }}
     <a href="{{ path('artista_listar') }}" class="btn btn-info">Volver</a>
     <input type="submit" value="enviar" class="btn btn-success">
-    {% if artista.id %}<a href="{{ path('artista_eliminar', {id : artista.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
+    {% if is_granted('ROLE_ADMIN') %}
+        {% if artista.id %}<a href="{{ path('artista_eliminar', {id : artista.id}) }}" class="btn btn-danger">borrar</a>{% endif %}
+        {% if artista.id %}<a href="{{ path('artista_cambiar_clave', {id : artista.id}) }}" class="btn btn-danger">cambiar contraseña</a>{% endif %}
+    {% endif %}
     {{ form_end(form) }}
 {% endblock %}
 
